--- a/src/test/resources/properties/stage-9mcollab.properties
+++ b/src/test/resources/properties/stage-9mcollab.properties
@@ -1,1 +1,9 @@
-url="https://automationtesting.staging-9mcollab.com"
+url=https://automationtesting.staging-9mcollab.com
+username=9muser5@yopmail.com
+password=Test123!@
+mainTopic=654Group989
+description=Topic description
+conclusionName=123conclusion
+#driver settings
+key=webdriver.chrome.driver
+value=src/test/resources/driver/chromeDriver.exe
