--- a/src/test/resources/properties/stage-9mcollab.properties
+++ b/src/test/resources/properties/stage-9mcollab.properties
@@ -1,9 +1,13 @@
 url=https://automationtesting.staging-9mcollab.com
-username=9muser5@yopmail.com
+username1=9muser5@yopmail.com
+username2=9muser6@yopmail.com
 password=Test123!@
-mainTopic=654Group989
+mainTopic=Group
+subtopicName=Subtopic
 description=Topic description
-conclusionName=123conclusion
+conclusionName=Conclusion
+topicMessage=This is a test Topic message
+subtopicMessage=This is a test Subtopic message
 #driver settings
 key=webdriver.chrome.driver
 value=src/test/resources/driver/chromeDriver.exe
