Extent Report added.

--- a/src/test/resources/properties/stage-9mcollab.properties
+++ b/src/test/resources/properties/stage-9mcollab.properties
@@ -8,6 +8,8 @@ description=Topic description
 conclusionName=Conclusion
 topicMessage=This is a test Topic message
 subtopicMessage=This is a test Subtopic message
+
 #driver settings
 key=webdriver.chrome.driver
 value=src/test/resources/driver/chromeDriver.exe
+extentReportPath=src/test/output/extentReport/extentReport.html
