--- a/src/test/resources/properties/stage-9mcollab.properties
+++ b/src/test/resources/properties/stage-9mcollab.properties
@@ -1,15 +1,17 @@
+#login info
 url=https://automationtesting.staging-9mcollab.com
 username1=9muser5@yopmail.com
 username2=9muser6@yopmail.com
 password=Test123!@
+#test data
 mainTopic=Group
 subtopicName=Subtopic
 description=Topic description
 conclusionName=Conclusion
-topicMessage=This is a test Topic message
-subtopicMessage=This is a test Subtopic message
-
+topicMessage=This is a main topic message
+subtopicMessage=This is a subtopic message
 #driver settings
 key=webdriver.chrome.driver
 value=src/test/resources/driver/chromeDriver.exe
+#path to the report
 extentReportPath=src/test/output/extentReport/extentReport.html
