--- a/src/test/resources/properties/stage-9mcollab.properties
+++ b/src/test/resources/properties/stage-9mcollab.properties
@@ -5,13 +5,12 @@ username2=9muser6@yopmail.com
 password=Test123!@
 #test data
 mainTopic=Group
-subtopicName=Subtopic
+manualTopic=654Group987
+subtopic=Subtopic
 description=Topic description
 conclusionName=Conclusion
-topicMessage=This is a main topic message
-subtopicMessage=This is a subtopic message
+topicMessage=This is new Topic message
+subtopicMessage=This is new Subtopic message
 #driver settings
 key=webdriver.chrome.driver
 value=src/test/resources/driver/chromeDriver.exe
-#path to the report
-extentReportPath=src/test/output/extentReport/extentReport.html
