--- a/src/test/resources/properties/stage-9mcollab.properties
+++ b/src/test/resources/properties/stage-9mcollab.properties
@@ -5,12 +5,12 @@ username2=9muser6@yopmail.com
 password=Test123!@
 #test data
 mainTopic=Group
-manualTopic=654Group987
+manualTopic=ManuallyCreatedGroup
 subtopic=Subtopic
 description=Topic description
 conclusionName=Conclusion
-topicMessage=This is new Topic message
-subtopicMessage=This is new Subtopic message
+topicMessage=This is an automated Topic message
+subtopicMessage=This is an automated Subtopic message
 #driver settings
 key=webdriver.chrome.driver
 value=src/test/resources/driver/chromeDriver.exe
